// Vitest Snapshot v1

exports[`renders error type 1`] = `
<div id="overlay" class="error overlay" data-testid="overlay">
  <div class="display">
    <!--v-if--><br data-testid="icon" icon="[object Object]">
    <!--v-if-->
    <!--v-if-->
    <!--v-if--><span class="message">Look at me now</span>
  </div>
  <!--v-if-->
</div>
`;

exports[`renders info type 1`] = `
<div id="overlay" class="info overlay" data-testid="overlay">
  <div class="display">
    <!--v-if-->
    <!--v-if-->
    <!--v-if--><br data-testid="icon" icon="[object Object]">
    <!--v-if--><span class="message">Look at me now</span>
  </div>
  <!--v-if-->
</div>
`;

exports[`renders loading type 1`] = `
<div id="overlay" class="loading overlay" data-testid="overlay">
  <div class="display"><i data-v-4fa15baa=""><span data-v-4fa15baa=""></span><span data-v-4fa15baa=""></span><span data-v-4fa15baa=""></span></i>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if--><span class="message">Look at me now</span>
  </div>
  <!--v-if-->
</div>
`;

exports[`renders success type 1`] = `
<div id="overlay" class="success overlay" data-testid="overlay">
  <div class="display">
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
    <!--v-if--><br data-testid="icon" icon="[object Object]"><span class="message">Look at me now</span>
  </div>
  <!--v-if-->
</div>
`;

exports[`renders warning type 1`] = `
<div id="overlay" class="warning overlay" data-testid="overlay">
  <div class="display">
    <!--v-if-->
    <!--v-if--><br data-testid="icon" icon="[object Object]">
    <!--v-if-->
    <!--v-if--><span class="message">Look at me now</span>
  </div>
  <!--v-if-->
</div>
`;
